--- a/rectangulation.html
+++ b/rectangulation.html
@@ -48,11 +48,11 @@
             gl_FragColor = vec4( 0.0, 0.0, 0.0, 1.0 );
         }
     </script>
-    <script type="text/javascript" src="../Common/MV.js"></script>
-    <script type="text/javascript" src="../Common/MV2.js"></script>
-    <script type="text/javascript" src="../Common/initShaders2.js"></script>
-    <script type="text/javascript" src="../Common/webgl-utils.js"></script>
-    <script type="text/javascript" src="../Common/initShaders.js"></script>
+    <script type="text/javascript" src="./Common/MV.js"></script>
+    <script type="text/javascript" src="./Common/MV2.js"></script>
+    <script type="text/javascript" src="./Common/initShaders2.js"></script>
+    <script type="text/javascript" src="./Common/webgl-utils.js"></script>
+    <script type="text/javascript" src="./Common/initShaders.js"></script>
     <script type="text/javascript" src="rectangulation.js"></script>
 </head>
 
