--- a/rectangulation.html
+++ b/rectangulation.html
@@ -67,5 +67,7 @@
         <div class="button-row" id="button-container-3"></div>
         <div class="button-row" id="undo button"><button id="undo">Undo</button></div>
     </div>
+
+    <button class="button-row" onclick="takeScreenshot()">Take Screenshot</button>
 </body>
 </html>
